<resources>
    <string name="app_name">SMART JOB</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="btn_login">SE CONNECTER</string>
    <string name="btn_forgot_password">Mot de passe oublié?</string>
    <string name="hint_new_email">Nouveau Email</string>
    <string name="new_pass">Nouveau Mot de Passe</string>
    <string name="btn_change">Changer</string>
    <string name="btn_send">Envoyer</string>
    <string name="btn_remove">Supprimer</string>
    <string name="change_email">Changer Email</string>
    <string name="change_password">Changer mot de passe</string>
    <string name="send_password_reset_email">Envoyer Email de reinitialisation de mot passe</string>
    <string name="remove_user">Supprimer votre compte</string>
    <string name="btn_sign_out">Se deconnecter</string>
    <string name="lbl_forgot_password">Mot de passe oublié?</string>
    <string name="forgot_password_msg">Entrer votre email de récuperation</string>
    <string name="btn_reset_password">Reinitialiser Mot de passe</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="action_sign_in_short">S\'enregistrer</string>
    <string name="btn_link_to_login">Déja enregistré. Se connecter!</string>
    <string name="email">Email</string>
    <string name="minimum_password">Mot de passe trop court, entrer 6 caractères minimum</string>
    <string name="auth_failed">Echec d\'authentification, verifier votre email et mot de passe ou s\'enregistrer </string>
    <string name="Offreur">OFFREUR</string>
    <string name="Client">CLIENT</string>
    <string name="title_activity_client">CLIENT DASHBOARD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_offerer">AGENT DASHBOARD</string>

    <string name="image">Image</string>
    <string name="text_online">Se mettre en Ligne</string>

</resources>
